--- a/pom.xml
+++ b/pom.xml
@@ -56,21 +56,6 @@
 			<version>3.10</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/net.sourceforge.pmd/pmd -->
-		<dependency>
-			<groupId>net.sourceforge.pmd</groupId>
-			<artifactId>pmd</artifactId>
-			<version>6.23.0</version>
-			<type>pom</type>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/com.google.code.findbugs/findbugs -->
-		<dependency>
-			<groupId>com.google.code.findbugs</groupId>
-			<artifactId>findbugs</artifactId>
-			<version>3.0.1</version>
-		</dependency>
-
 		<!-- https://mvnrepository.com/artifact/io.quarkus/quarkus-junit5 -->
 		<dependency>
 			<groupId>io.quarkus</groupId>
@@ -94,8 +79,25 @@
 			<version>3.1.1</version>
 		</dependency>
 
+<!--		&lt;!&ndash; https://mvnrepository.com/artifact/com.google.code.findbugs/findbugs &ndash;&gt;-->
+<!--		<dependency>-->
+<!--			<groupId>com.google.code.findbugs</groupId>-->
+<!--			<artifactId>findbugs</artifactId>-->
+<!--			<version>3.0.1</version>-->
+<!--		</dependency>-->
+
 
 	</dependencies>
+
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>com.google.code.findbugs</groupId>
+				<artifactId>findbugs</artifactId>
+				<version>3.0.1</version>
+			</plugin>
+		</plugins>
+	</reporting>
 
 	<build>
 		<plugins>
@@ -103,6 +105,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
@@ -110,7 +113,7 @@
 				<configuration>
 					<encoding>UTF-8</encoding>
 					<consoleOutput>true</consoleOutput>
-					<failsOnError>true</failsOnError>
+					<failsOnError>false</failsOnError>
 					<linkXRef>false</linkXRef>
 				</configuration>
 				<executions>
@@ -123,6 +126,23 @@
 					</execution>
 				</executions>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-pmd-plugin</artifactId>
+				<version>3.13.0</version>
+				<executions>
+					<execution>
+					<id>validate</id>
+					<phase>validate</phase>
+					<goals>
+						<goal>check</goal>
+					</goals>
+					</execution>
+				</executions>
+
+			</plugin>
+
 		</plugins>
 	</build>
 
